<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_over"
            android:theme="@style/text18Theme" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/try_again"
            android:theme="@style/text18Theme" />

        <ImageView
            android:id="@+id/planet_lose"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/cha_0_0" />

        <TextView
            android:id="@+id/coin_lose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="0 COINS"
            android:theme="@style/text18Theme" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/go_to_planets_lose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dark_rect"
            android:text="@string/play_again"
            android:theme="@style/text14Theme" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/menu_lose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="@drawable/dark_rect"
            android:text="@string/menu"
            android:theme="@style/text14Theme" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
