<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="180dp"
    android:background="@drawable/bg_rect2"
    android:orientation="vertical">

    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.3"
        android:background="@color/blue"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/planet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/planet"
            android:theme="@style/text11Theme" />

        <TextView
            android:id="@+id/mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/easy"
            android:textColor="@color/green"
            android:theme="@style/text11Theme" />

        <TextView
            android:id="@+id/award"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Award: 150"
            android:theme="@style/text11Theme" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@drawable/blue_rect"
            android:text="@string/explore"
            android:theme="@style/text11Theme" />

        <TextView
            android:id="@+id/alert"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/buy_equipment_in_the_shop"
            android:theme="@style/text10Theme"
            android:textColor="@color/red"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
