<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context=".CoreActivity">

    <LinearLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/dark_rect"
                    android:gravity="center"
                    android:paddingLeft="7dp"
                    android:paddingRight="7dp">

                    <TextView
                        android:id="@+id/planets_explored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/planets_explored"
                        android:theme="@style/text11Theme" />
                </LinearLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/dark_rect"
                    android:gravity="center"
                    android:paddingLeft="7dp"
                    android:paddingRight="7dp">

                    <TextView
                        android:id="@+id/coin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center|right"
                        android:text="Coins: 233"
                        android:theme="@style/text11Theme" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/coin" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:src="@drawable/back_large" />

            <LinearLayout
                android:id="@+id/layout_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/core"
                    android:theme="@style/text18Theme" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="00:50"
                    android:theme="@style/text18Theme" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_canvas"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_disc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/core_dis"
                android:theme="@style/text10Theme" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_complete"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <include layout="@layout/complete" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_lose"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <include layout="@layout/lose" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>