<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context=".StatusActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/dark_rect"
                    android:gravity="center"
                    android:paddingLeft="7dp"
                    android:paddingRight="7dp">

                    <TextView
                        android:id="@+id/planets_explored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/planets_explored"
                        android:theme="@style/text11Theme" />
                </LinearLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/dark_rect"
                    android:gravity="center"
                    android:paddingLeft="7dp"
                    android:paddingRight="7dp">

                    <TextView
                        android:id="@+id/coin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center|right"
                        android:text="Coins: 233"
                        android:theme="@style/text11Theme" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/coin" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:src="@drawable/back_large" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="AZR1122"
                    android:theme="@style/text18Theme" />
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/planet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/cha_0_0" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/status_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/completed"
                        android:theme="@style/text11Theme" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/gray_rect"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/atmos" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/completed"
                            android:theme="@style/text11Theme" />
                    </LinearLayout>
                </LinearLayout>

                <Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/award_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Award: 233"
                        android:theme="@style/text11Theme" />

                    <LinearLayout
                        android:id="@+id/one_play_again"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/gray_rect"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/play_again"
                            android:theme="@style/text11Theme" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="bottom">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/status_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ready"
                        android:textColor="@color/green"
                        android:theme="@style/text11Theme" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/green_rect"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ground" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/completed"
                            android:theme="@style/text11Theme" />
                    </LinearLayout>
                </LinearLayout>

                <Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/award_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Award: 233"
                        android:theme="@style/text11Theme" />

                    <LinearLayout
                        android:id="@+id/two_play_again"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/green_rect"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/play_again"
                            android:theme="@style/text11Theme" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="bottom">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/status_three"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/closed"
                        android:textColor="@color/red"
                        android:theme="@style/text11Theme" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/dark_rect"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/core" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/completed"
                            android:textColor="@color/gray"
                            android:theme="@style/text11Theme" />
                    </LinearLayout>
                </LinearLayout>

                <Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/award_three"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Award: 233"
                        android:theme="@style/text11Theme" />

                    <LinearLayout
                        android:id="@+id/three_play_again"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/dark_rect"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/play_again"
                            android:textColor="@color/gray"
                            android:theme="@style/text11Theme" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>